phaseB/parser.output
State 39 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmts
    2        | %empty

    3 stmts: stmts stmt
    4      | stmt

    5 stmt: expr ';'
    6     | ifstmt
    7     | whilestmt
    8     | forstmt
    9     | returnstmt
   10     | BREAK ';'
   11     | CONTINUE ';'
   12     | block
   13     | funcdef
   14     | ';'

   15 expr: assignexpr
   16     | expr op
   17     | term

   18 op: '+' expr
   19   | '-' expr
   20   | '*' expr
   21   | '/' expr
   22   | '%' expr
   23   | '>' expr
   24   | GREATER_EQUAL expr
   25   | '<' expr
   26   | LESS_EQUAL expr
   27   | NOT_EQUAL expr
   28   | AND expr
   29   | OR expr
   30   | EQUAL_EQUAL expr

   31 term: '(' expr ')'
   32     | '-' expr
   33     | NOT expr
   34     | PLUS_PLUS lvalue
   35     | lvalue PLUS_PLUS
   36     | MINUS_MINUS lvalue
   37     | lvalue MINUS_MINUS
   38     | primary

   39 assignexpr: lvalue '=' expr

   40 primary: lvalue
   41        | call
   42        | objectdef
   43        | '(' funcdef ')'
   44        | const

   45 lvalue: ID
   46       | LOCAL ID
   47       | SCOPE ID
   48       | member

   49 member: lvalue '.' ID
   50       | lvalue '[' expr ']'
   51       | call '.' ID
   52       | call '[' expr ']'

   53 call: call '(' elist ')'
   54     | lvalue callsuffix
   55     | '(' funcdef ')' '(' elist ')'

   56 callsuffix: normcall
   57           | methodcall

   58 normcall: '(' elist ')'

   59 methodcall: DOT_DOT ID '(' elist ')'

   60 elist: elist exprs
   61      | expr

   62 exprs: ',' expr

   63 objectdef: '[' objectdefs ']'
   64          | '[' ']'

   65 objectdefs: elist
   66           | indexed

   67 indexed: indexed indexeds
   68        | indexedelem

   69 indexeds: ',' indexedelem

   70 indexedelem: '{' expr ':' expr '}'

   71 block: '{' stmts '}'
   72      | '{' '}'

   73 funcdef: FUNCTION ID '(' idlist ')' block
   74        | FUNCTION '(' idlist ')' block

   75 const: INTCONST
   76      | REALCONST
   77      | STRING
   78      | NIL
   79      | TRUE
   80      | FALSE

   81 idlist: idlist idlists
   82       | ID
   83       | %empty

   84 idlists: ',' ID

   85 ifstmt: ifstmt ELSE stmt
   86       | IF '(' expr ')' stmt

   87 whilestmt: WHILE '(' expr ')' stmt

   88 forstmt: FOR '(' elist ';' expr ';' elist ')' stmt

   89 returnstmt: RETURN expr ';'
   90           | RETURN ';'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 22
'(' (40) 31 43 53 55 58 59 73 74 86 87 88
')' (41) 31 43 53 55 58 59 73 74 86 87 88
'*' (42) 20
'+' (43) 18
',' (44) 62 69 84
'-' (45) 19 32
'.' (46) 49 51
'/' (47) 21
':' (58) 70
';' (59) 5 10 11 14 88 89 90
'<' (60) 25
'=' (61) 39
'>' (62) 23
'[' (91) 50 52 63 64
']' (93) 50 52 63 64
'{' (123) 70 71 72
'}' (125) 70 71 72
error (256)
ID (258) 45 46 47 49 51 59 73 82 84
INTCONST (259) 75
STRING (260) 77
REALCONST (261) 76
IF (262) 86
ELSE (263) 85
WHILE (264) 87
FOR (265) 88
FUNCTION (266) 73 74
RETURN (267) 89 90
BREAK (268) 10
CONTINUE (269) 11
NIL (270) 78
LOCAL (271) 46
AND (272) 28
NOT (273) 33
OR (274) 29
TRUE (275) 79
FALSE (276) 80
SCOPE (277) 47
NOT_EQUAL (278) 27
EQUAL_EQUAL (279) 30
DOT_DOT (280) 59
GREATER_EQUAL (281) 24
LESS_EQUAL (282) 26
MINUS_MINUS (283) 36 37
PLUS_PLUS (284) 34 35
UMINUS (285)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
program (50)
    on left: 1 2, on right: 0
stmts (51)
    on left: 3 4, on right: 1 3 71
stmt (52)
    on left: 5 6 7 8 9 10 11 12 13 14, on right: 3 4 85 86 87 88
expr (53)
    on left: 15 16 17, on right: 5 16 18 19 20 21 22 23 24 25 26 27
    28 29 30 31 32 33 39 50 52 61 62 70 86 87 88 89
op (54)
    on left: 18 19 20 21 22 23 24 25 26 27 28 29 30, on right: 16
term (55)
    on left: 31 32 33 34 35 36 37 38, on right: 17
assignexpr (56)
    on left: 39, on right: 15
primary (57)
    on left: 40 41 42 43 44, on right: 38
lvalue (58)
    on left: 45 46 47 48, on right: 34 35 36 37 39 40 49 50 54
member (59)
    on left: 49 50 51 52, on right: 48
call (60)
    on left: 53 54 55, on right: 41 51 52 53
callsuffix (61)
    on left: 56 57, on right: 54
normcall (62)
    on left: 58, on right: 56
methodcall (63)
    on left: 59, on right: 57
elist (64)
    on left: 60 61, on right: 53 55 58 59 60 65 88
exprs (65)
    on left: 62, on right: 60
objectdef (66)
    on left: 63 64, on right: 42
objectdefs (67)
    on left: 65 66, on right: 63
indexed (68)
    on left: 67 68, on right: 66 67
indexeds (69)
    on left: 69, on right: 67
indexedelem (70)
    on left: 70, on right: 68 69
block (71)
    on left: 71 72, on right: 12 73 74
funcdef (72)
    on left: 73 74, on right: 13 43 55
const (73)
    on left: 75 76 77 78 79 80, on right: 44
idlist (74)
    on left: 81 82 83, on right: 73 74 81
idlists (75)
    on left: 84, on right: 81
ifstmt (76)
    on left: 85 86, on right: 6 85
whilestmt (77)
    on left: 87, on right: 7
forstmt (78)
    on left: 88, on right: 8
returnstmt (79)
    on left: 89 90, on right: 9


State 0

    0 $accept: . program $end

    ID           shift, and go to state 1
    INTCONST     shift, and go to state 2
    STRING       shift, and go to state 3
    REALCONST    shift, and go to state 4
    IF           shift, and go to state 5
    WHILE        shift, and go to state 6
    FOR          shift, and go to state 7
    FUNCTION     shift, and go to state 8
    RETURN       shift, and go to state 9
    BREAK        shift, and go to state 10
    CONTINUE     shift, and go to state 11
    NIL          shift, and go to state 12
    LOCAL        shift, and go to state 13
    NOT          shift, and go to state 14
    TRUE         shift, and go to state 15
    FALSE        shift, and go to state 16
    SCOPE        shift, and go to state 17
    MINUS_MINUS  shift, and go to state 18
    '-'          shift, and go to state 19
    PLUS_PLUS    shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22
    ';'          shift, and go to state 23
    '{'          shift, and go to state 24

    $default  reduce using rule 2 (program)

    program     go to state 25
    stmts       go to state 26
    stmt        go to state 27
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    ifstmt      go to state 39
    whilestmt   go to state 40
    forstmt     go to state 41
    returnstmt  go to state 42


State 1

   45 lvalue: ID .

    $default  reduce using rule 45 (lvalue)


State 2

   75 const: INTCONST .

    $default  reduce using rule 75 (const)


State 3

   77 const: STRING .

    $default  reduce using rule 77 (const)


State 4

   76 const: REALCONST .

    $default  reduce using rule 76 (const)


State 5

   86 ifstmt: IF . '(' expr ')' stmt

    '('  shift, and go to state 43


State 6

   87 whilestmt: WHILE . '(' expr ')' stmt

    '('  shift, and go to state 44


State 7

   88 forstmt: FOR . '(' elist ';' expr ';' elist ')' stmt

    '('  shift, and go to state 45


State 8

   73 funcdef: FUNCTION . ID '(' idlist ')' block
   74        | FUNCTION . '(' idlist ')' block

    ID   shift, and go to state 46
    '('  shift, and go to state 47


State 9

   89 returnstmt: RETURN . expr ';'
   90           | RETURN . ';'

    ID           shift, and go to state 1
    INTCONST     shift, and go to state 2
    STRING       shift, and go to state 3
    REALCONST    shift, and go to state 4
    NIL          shift, and go to state 12
    LOCAL        shift, and go to state 13
    NOT          shift, and go to state 14
    TRUE         shift, and go to state 15
    FALSE        shift, and go to state 16
    SCOPE        shift, and go to state 17
    MINUS_MINUS  shift, and go to state 18
    '-'          shift, and go to state 19
    PLUS_PLUS    shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22
    ';'          shift, and go to state 48

    expr        go to state 49
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 10

   10 stmt: BREAK . ';'

    ';'  shift, and go to state 50


State 11

   11 stmt: CONTINUE . ';'

    ';'  shift, and go to state 51


State 12

   78 const: NIL .

    $default  reduce using rule 78 (const)


State 13

   46 lvalue: LOCAL . ID

    ID  shift, and go to state 52


State 14

   33 term: NOT . expr

    ID           shift, and go to state 1
    INTCONST     shift, and go to state 2
    STRING       shift, and go to state 3
    REALCONST    shift, and go to state 4
    NIL          shift, and go to state 12
    LOCAL        shift, and go to state 13
    NOT          shift, and go to state 14
    TRUE         shift, and go to state 15
    FALSE        shift, and go to state 16
    SCOPE        shift, and go to state 17
    MINUS_MINUS  shift, and go to state 18
    '-'          shift, and go to state 19
    PLUS_PLUS    shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22

    expr        go to state 53
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 15

   79 const: TRUE .

    $default  reduce using rule 79 (const)


State 16

   80 const: FALSE .

    $default  reduce using rule 80 (const)


State 17

   47 lvalue: SCOPE . ID

    ID  shift, and go to state 54


State 18

   36 term: MINUS_MINUS . lvalue

    ID     shift, and go to state 1
    LOCAL  shift, and go to state 13
    SCOPE  shift, and go to state 17
    '('    shift, and go to state 55

    lvalue  go to state 56
    member  go to state 33
    call    go to state 57


State 19

   32 term: '-' . expr

    ID           shift, and go to state 1
    INTCONST     shift, and go to state 2
    STRING       shift, and go to state 3
    REALCONST    shift, and go to state 4
    NIL          shift, and go to state 12
    LOCAL        shift, and go to state 13
    NOT          shift, and go to state 14
    TRUE         shift, and go to state 15
    FALSE        shift, and go to state 16
    SCOPE        shift, and go to state 17
    MINUS_MINUS  shift, and go to state 18
    '-'          shift, and go to state 19
    PLUS_PLUS    shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22

    expr        go to state 58
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 20

   34 term: PLUS_PLUS . lvalue

    ID     shift, and go to state 1
    LOCAL  shift, and go to state 13
    SCOPE  shift, and go to state 17
    '('    shift, and go to state 55

    lvalue  go to state 59
    member  go to state 33
    call    go to state 57


State 21

   63 objectdef: '[' . objectdefs ']'
   64          | '[' . ']'

    ID           shift, and go to state 1
    INTCONST     shift, and go to state 2
    STRING       shift, and go to state 3
    REALCONST    shift, and go to state 4
    NIL          shift, and go to state 12
    LOCAL        shift, and go to state 13
    NOT          shift, and go to state 14
    TRUE         shift, and go to state 15
    FALSE        shift, and go to state 16
    SCOPE        shift, and go to state 17
    MINUS_MINUS  shift, and go to state 18
    '-'          shift, and go to state 19
    PLUS_PLUS    shift, and go to state 20
    '['          shift, and go to state 21
    ']'          shift, and go to state 60
    '('          shift, and go to state 22
    '{'          shift, and go to state 61

    expr         go to state 62
    term         go to state 29
    assignexpr   go to state 30
    primary      go to state 31
    lvalue       go to state 32
    member       go to state 33
    call         go to state 34
    elist        go to state 63
    objectdef    go to state 35
    objectdefs   go to state 64
    indexed      go to state 65
    indexedelem  go to state 66
    const        go to state 38


State 22

   31 term: '(' . expr ')'
   43 primary: '(' . funcdef ')'
   55 call: '(' . funcdef ')' '(' elist ')'

    ID           shift, and go to state 1
    INTCONST     shift, and go to state 2
    STRING       shift, and go to state 3
    REALCONST    shift, and go to state 4
    FUNCTION     shift, and go to state 8
    NIL          shift, and go to state 12
    LOCAL        shift, and go to state 13
    NOT          shift, and go to state 14
    TRUE         shift, and go to state 15
    FALSE        shift, and go to state 16
    SCOPE        shift, and go to state 17
    MINUS_MINUS  shift, and go to state 18
    '-'          shift, and go to state 19
    PLUS_PLUS    shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22

    expr        go to state 67
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    funcdef     go to state 68
    const       go to state 38


State 23

   14 stmt: ';' .

    $default  reduce using rule 14 (stmt)


State 24

   71 block: '{' . stmts '}'
   72      | '{' . '}'

    ID           shift, and go to state 1
    INTCONST     shift, and go to state 2
    STRING       shift, and go to state 3
    REALCONST    shift, and go to state 4
    IF           shift, and go to state 5
    WHILE        shift, and go to state 6
    FOR          shift, and go to state 7
    FUNCTION     shift, and go to state 8
    RETURN       shift, and go to state 9
    BREAK        shift, and go to state 10
    CONTINUE     shift, and go to state 11
    NIL          shift, and go to state 12
    LOCAL        shift, and go to state 13
    NOT          shift, and go to state 14
    TRUE         shift, and go to state 15
    FALSE        shift, and go to state 16
    SCOPE        shift, and go to state 17
    MINUS_MINUS  shift, and go to state 18
    '-'          shift, and go to state 19
    PLUS_PLUS    shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22
    ';'          shift, and go to state 23
    '{'          shift, and go to state 24
    '}'          shift, and go to state 69

    stmts       go to state 70
    stmt        go to state 27
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    ifstmt      go to state 39
    whilestmt   go to state 40
    forstmt     go to state 41
    returnstmt  go to state 42


State 25

    0 $accept: program . $end

    $end  shift, and go to state 71


State 26

    1 program: stmts .
    3 stmts: stmts . stmt

    ID           shift, and go to state 1
    INTCONST     shift, and go to state 2
    STRING       shift, and go to state 3
    REALCONST    shift, and go to state 4
    IF           shift, and go to state 5
    WHILE        shift, and go to state 6
    FOR          shift, and go to state 7
    FUNCTION     shift, and go to state 8
    RETURN       shift, and go to state 9
    BREAK        shift, and go to state 10
    CONTINUE     shift, and go to state 11
    NIL          shift, and go to state 12
    LOCAL        shift, and go to state 13
    NOT          shift, and go to state 14
    TRUE         shift, and go to state 15
    FALSE        shift, and go to state 16
    SCOPE        shift, and go to state 17
    MINUS_MINUS  shift, and go to state 18
    '-'          shift, and go to state 19
    PLUS_PLUS    shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22
    ';'          shift, and go to state 23
    '{'          shift, and go to state 24

    $default  reduce using rule 1 (program)

    stmt        go to state 72
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    ifstmt      go to state 39
    whilestmt   go to state 40
    forstmt     go to state 41
    returnstmt  go to state 42


State 27

    4 stmts: stmt .

    $default  reduce using rule 4 (stmts)


State 28

    5 stmt: expr . ';'
   16 expr: expr . op

    AND            shift, and go to state 73
    OR             shift, and go to state 74
    NOT_EQUAL      shift, and go to state 75
    EQUAL_EQUAL    shift, and go to state 76
    GREATER_EQUAL  shift, and go to state 77
    LESS_EQUAL     shift, and go to state 78
    '>'            shift, and go to state 79
    '<'            shift, and go to state 80
    '+'            shift, and go to state 81
    '-'            shift, and go to state 82
    '*'            shift, and go to state 83
    '/'            shift, and go to state 84
    '%'            shift, and go to state 85
    ';'            shift, and go to state 86

    op  go to state 87


State 29

   17 expr: term .

    $default  reduce using rule 17 (expr)


State 30

   15 expr: assignexpr .

    $default  reduce using rule 15 (expr)


State 31

   38 term: primary .

    $default  reduce using rule 38 (term)


State 32

   35 term: lvalue . PLUS_PLUS
   37     | lvalue . MINUS_MINUS
   39 assignexpr: lvalue . '=' expr
   40 primary: lvalue .
   49 member: lvalue . '.' ID
   50       | lvalue . '[' expr ']'
   54 call: lvalue . callsuffix

    DOT_DOT      shift, and go to state 88
    MINUS_MINUS  shift, and go to state 89
    '='          shift, and go to state 90
    PLUS_PLUS    shift, and go to state 91
    '.'          shift, and go to state 92
    '['          shift, and go to state 93
    '('          shift, and go to state 94

    $default  reduce using rule 40 (primary)

    callsuffix  go to state 95
    normcall    go to state 96
    methodcall  go to state 97


State 33

   48 lvalue: member .

    $default  reduce using rule 48 (lvalue)


State 34

   41 primary: call .
   51 member: call . '.' ID
   52       | call . '[' expr ']'
   53 call: call . '(' elist ')'

    '.'  shift, and go to state 98
    '['  shift, and go to state 99
    '('  shift, and go to state 100

    $default  reduce using rule 41 (primary)


State 35

   42 primary: objectdef .

    $default  reduce using rule 42 (primary)


State 36

   12 stmt: block .

    $default  reduce using rule 12 (stmt)


State 37

   13 stmt: funcdef .

    $default  reduce using rule 13 (stmt)


State 38

   44 primary: const .

    $default  reduce using rule 44 (primary)


State 39

    6 stmt: ifstmt .
   85 ifstmt: ifstmt . ELSE stmt

    ELSE  shift, and go to state 101

    ELSE      [reduce using rule 6 (stmt)]
    $default  reduce using rule 6 (stmt)


State 40

    7 stmt: whilestmt .

    $default  reduce using rule 7 (stmt)


State 41

    8 stmt: forstmt .

    $default  reduce using rule 8 (stmt)


State 42

    9 stmt: returnstmt .

    $default  reduce using rule 9 (stmt)


State 43

   86 ifstmt: IF '(' . expr ')' stmt
